  to operate on in the emacs way (that is, starting at cursor
  position); this behaviour can be restored by using the argument
  "partial".

!!!The following LyX key bindings have been changed in 2.2:

* For bindings where Control + {PgDn, PgUp} switches to the
  {next, previous} tab, Control + Shift + {PgDn, PgUp} moves the current
  tab to the {next, previous} tab.

* The shortcuts for "bookmark-save x" have been changed from C-M-S-x to S-Fx
  ("x" stands for the number of the bookmark.)


!!!The following LyX documents have been moved in 2.2:



!!!The following metadata files have been added to the tarball in 2.2:



!!Changes with respect to external programs and libraries in 2.2:

* LyX is not yet supposed to work with Qt5. It is advised to compile and
  run LyX against Qt 4.8.x. On Windows Qt 4.8.6 or newer is advised.

* LyX now gives an error if the underlying LaTeX command exited with error.

* With LuaTeX, LyX now uses polyglossia instead of babel if the language
  package option "Automatic" is selected. In order to use babel, select
  "Always babel" instead.


!!Known issues in version 2.2.0

* LyX needs to be run under Python 2 and will not work properly on systems
  where Python 3 is the default binary. See bug #7030 to know how to fix
  this properly, since simple shebang conversion in *.py files will not
  be enough.


!!Caveats when upgrading from earlier versions to 2.2.x

* BibTeX errors are now processed and cause LyX to show the errors dialog.
  Before, these errors were ignored, which means that it may happen that
  documents that compiled without error with a previous version now
  compile with error. However, because now in 2.2.x users can click on
  the "Show Output Anyway" button, the document can still be viewed.

* With XeTeX and LuaTeX, missing characters in the output are now reported
  as errors. This leads to error reports for documents that compiled without
  error before. However, the error was always present but went undetected!
